--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::ToXML.
 
+0.10  Tue Jun 8 1999
+	- Fixed stupid NT CRLF's... Grrr... (thanks Tim)
+	
 0.09  Mon Jun 7 1999
 	- Bug fix for when typing a / in the form field
 
